# AoC_2025

./: README.md
bhavesh/haskell/: .gitignore  CHANGELOG.md  LICENSE  aoc2025haskell.cabal
bhavesh/haskell/app/: DayXX.hs  Main.hs  Model.hs
bhavesh/haskell/app/AOC2025/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Module.hs
bhavesh/haskell/app/Util/: AOCHttpUtils.hs  AOCUtils.hs  MathUtils.hs  ParseUtils.hs  TimeUtils.hs
bhavesh/haskell/app/Util/GridUtils/: Coord.hs  DirectionMoore.hs  DirectionVonNeumann.hs  Grid.hs
bhavesh/unison/: .gitignore  README.md
francois/C#/: README.md  day01.fastest.cs  day01.original.cs  day02.fastest.cs  day02.original.cs  day03.original.cs  day04.original.cs  day05.original.cs  day06.original.cs  day07.original.cs  day08.original.cs  day09.original.cs  day12.original.cs
francois/Rust/: README.md
jason/: README.md
jason/python/day3/: day03.py
jason/python/day9/: day09.py
jeanette/c#/: aoc_2025.sln
jeanette/c#/aoc_2025/: Program.cs
jeanette/c#/aoc_2025/Days/Day1/: Day1.cs  Day1_Input.cs
jeanette/c#/aoc_2025/Days/Day2/: Day2.cs  Day2_Input.cs
jeanette/c#/aoc_2025/HelperFunctions/: HelperFunctions.cs
kieron/: Cargo.toml  README.md  new_day.sh  run.sh  test.out  test.sh
kieron/days/day01/: Cargo.toml
kieron/days/day01/src/: main.rs
kieron/days/day02/: Cargo.toml
kieron/days/day02/src/: main.rs
kieron/days/day03/: Cargo.toml
kieron/days/day03/src/: main.rs
kieron/days/day04/: Cargo.toml
kieron/days/day04/src/: main.rs
kieron/days/day05/: Cargo.toml
kieron/days/day05/src/: main.rs
kieron/days/day06/: Cargo.toml
kieron/days/day06/src/: main.rs
kieron/days/day07/: Cargo.toml
kieron/days/day07/src/: main.rs
kieron/days/day08/: Cargo.toml
kieron/days/day08/src/: main.rs
kieron/days/day09/: Cargo.toml
kieron/days/day09/src/: main.rs
kieron/src/: day_template.rs
kieron/src/utils/: Cargo.toml  lib.rs
liad/haskell/: LICENSE  aoc2025.cabal
liad/haskell/src/: AoC2025Day1.hs  AoC2025Day2.hs  AoC2025Day3.hs  AoC2025Day4.hs  AoC2025Day5.hs  AoC2025Day6.hs  AoC2025Day8.hs
liad/java/src/: Main.java
matt/: .gitignore  Cargo.toml  new_day.sh
matt/days/day01/: Cargo.toml
matt/days/day01/src/: main.rs
matt/utils/src/: lib.rs
micky_gee/01/: process.py
micky_gee/02/: process.py
micky_gee/03/: process.py
micky_gee/04/: process.py
micky_gee/05/: process.py
micky_gee/06/: process.py
micky_gee/07/: process.py
micky_gee/07/data/: test2.txt
micky_gee/08/: process.py
micky_gee/template/: process.py
miguel/haskell/: day1.hs  day2.hs  day3.hs  day4.hs  day5.hs
rui/: readme.md
rui/f#/day01/part01/: Main.fsx  debug_output.txt
rui/f#/day01/part02/: Main.fsx  debug_output.txt
tjaard/: .gitignore  aoc2025.cabal  day01.hs  hie.yaml
tjaard/app/: CharGrid.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Main.hs  Utils.hs
tjaard/src/: Day00.hs  Day01.hs
tom/: SETUP.md  aoc2025.cabal  sync.sh
tom/app/: Day01.hs  Day01_2018.hs  Day01_2024.hs  Day02.hs  Day02_2018.hs  Day03.hs  Day03_2018.hs  Day04.hs  Day04_2018.hs  Day05.hs  Day06.hs  Day07.hs  Day07Vis.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day12_2024.hs  DayXX.hs  Handy.hs  Main.hs  Play.hs
vincent-de-comarmond/01/: a.awk  b.awk
vincent-de-comarmond/03/: a.awk  b.awk
(+17 files in other folders)
