cabal-version: 3.0
name: aoc2025
version: 0.1.0.0

library
  default-language: GHC2021
  ghc-options: -Wall
  exposed-modules: Day00, Day01, Utils
  hs-source-dirs: src
  build-depends: base >=4.16 && <5
               , containers
               , vector
               , split
               , megaparsec

executable aoc2025
  default-language: GHC2021
  ghc-options: -Wall
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: base >=4.16 && <5
               , aoc2025
