cabal-version: 3.0
name: aoc2025
version: 0.1.0.0

executable aoc2025
  default-language: GHC2021
  ghc-options: -Wall
  main-is: Main.hs
  other-modules: Day00, Day01, Utils
  hs-source-dirs: app
  build-depends: base >=4.16 && <5
               , containers
               , vector
               , split
               , megaparsec
